# acoustic-parameter-sourcing-addon

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PLANNING_BOUNDARIES.md
examples/catalogs/: components.json  materials.json
examples/queries/: sensor_micro_probe.json
src/acoustic_parameter_sourcing_addon/: __init__.py  catalog.py  cli.py  models.py  planner.py
src/acoustic_parameter_sourcing_addon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_smoke.py
